--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint:all": "yarn lint & yarn lint:langgraph-json",
     "test:all": "yarn test && yarn test:int && yarn lint:langgraph",
     "start:auth": "yarn tsx src/clients/auth-server.ts",
-    "generate_post": "yarn tsx scripts/generate-demo-post.ts",
+    "generate_post": "yarn tsx scripts/generate-post.ts",
     "cron:create": "yarn tsx scripts/crons/create-cron.ts",
     "cron:delete": "yarn tsx scripts/crons/delete-cron.ts",
     "cron:list": "yarn tsx scripts/crons/list-crons.ts",
@@ -31,7 +31,7 @@
     "get:used_links": "yarn tsx scripts/get-all-used-links.ts",
     "graph:delete:run_thread": "yarn tsx scripts/delete-run-thread.ts",
     "langgraph:up": "langgraph up --watch --port 54367",
-    "langgraph:in_mem:up": "npx @langchain/langgraph-cli dev"
+    "langgraph:in_mem:up": "npx @langchain/langgraph-cli dev --port 54367"
   },
   "dependencies": {
     "@arcadeai/arcadejs": "^1.0.0",
