feat: Slack messaging

--- a/.env.full.example
+++ b/.env.full.example
@@ -76,3 +76,13 @@ SESSION_SECRET=
 
 # Slack channel ID to ingest messages from
 SLACK_CHANNEL_ID=
+
+# ENV VARS FOR SLACK MESSAGING
+
+# These are available in the oauth section of your Slack App
+SLACK_SIGNING_SECRET=
+SLACK_BOT_TOKEN=
+
+# This is either a specific ID of an assistant or the name of a graph
+# (the key of a graph in the key-value pairs in the langgraph.json file)
+LANGGRAPH_ASSISTANT_ID="ingest_repurposed_data"
