--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
   "dependencies": {
     "@arcadeai/arcadejs": "^1.0.0",
     "@googleapis/youtube": "^20.0.0",
-    "@langchain/anthropic": "^0.3.9",
-    "@langchain/community": "^0.3.22",
-    "@langchain/core": "^0.3.34",
+    "@langchain/anthropic": "^0.3.16",
+    "@langchain/community": "^0.3.39",
+    "@langchain/core": "^0.3.43",
     "@langchain/google-vertexai-web": "^0.1.2",
-    "@langchain/langgraph": "^0.2.41",
-    "@langchain/langgraph-sdk": "^0.0.36",
+    "@langchain/langgraph": "^0.2.62",
+    "@langchain/langgraph-sdk": "0.0.62",
     "@langchain/openai": "^0.3.17",
     "@mendable/firecrawl-js": "^1.10.1",
     "@octokit/rest": "^21.0.2",
