--- a/.env.quickstart.example
+++ b/.env.quickstart.example
@@ -21,3 +21,6 @@ POST_TO_LINKEDIN_ORGANIZATION="false"
 # _or_ set as an environment variable here.
 TWITTER_USER_ID=
 LINKEDIN_USER_ID=
+
+# Whether or not to skip the verification step. If "true", all links will be assumed to be valid.
+SKIP_CONTENT_RELEVANCY_CHECK="false"
