--- a/.env.full.example
+++ b/.env.full.example
@@ -86,3 +86,6 @@ SLACK_BOT_TOKEN=
 # This is either a specific ID of an assistant or the name of a graph
 # (the key of a graph in the key-value pairs in the langgraph.json file)
 LANGGRAPH_ASSISTANT_ID="ingest_repurposed_data"
+
+# Whether or not to skip the verification step. If "true", all links will be assumed to be valid.
+SKIP_CONTENT_RELEVANCY_CHECK="false"
