--- a/.env.full.example
+++ b/.env.full.example
@@ -89,3 +89,6 @@ LANGGRAPH_ASSISTANT_ID="ingest_repurposed_data"
 
 # Whether or not to skip the verification step. If "true", all links will be assumed to be valid.
 SKIP_CONTENT_RELEVANCY_CHECK="false"
+
+# Whether or not to skip the used URLs check. If "true", the graph will not prevent duplicate links from being used, or save those links for future checks.
+SKIP_USED_URLS_CHECK="false"
