--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
     "get:used_links": "yarn tsx scripts/get-all-used-links.ts",
     "graph:delete:run_thread": "yarn tsx scripts/delete-run-thread.ts",
     "langgraph:up": "langgraph up --watch --port 54367",
-    "langgraph:in_mem:up": "npx @langchain/langgraph-cli@latest dev --port 54367"
+    "langgraph:in_mem:up": "npx @langchain/langgraph-cli dev --port 54367"
   },
   "dependencies": {
     "@arcadeai/arcadejs": "^1.0.0",
     "@googleapis/youtube": "^20.0.0",
-    "@langchain/anthropic": "^0.3.24",
-    "@langchain/community": "^0.3.49",
-    "@langchain/core": "^0.3.66",
-    "@langchain/google-vertexai-web": "^0.2.15",
-    "@langchain/langgraph": "^0.3.10",
-    "@langchain/langgraph-sdk": "^0.0.99",
-    "@langchain/openai": "^0.6.2",
+    "@langchain/anthropic": "^0.3.16",
+    "@langchain/community": "^0.3.39",
+    "@langchain/core": "^0.3.43",
+    "@langchain/google-vertexai-web": "^0.1.2",
+    "@langchain/langgraph": "^0.2.62",
+    "@langchain/langgraph-sdk": "0.0.62",
+    "@langchain/openai": "^0.3.17",
     "@mendable/firecrawl-js": "^1.10.1",
     "@octokit/rest": "^21.0.2",
     "@slack/web-api": "^7.7.0",
@@ -57,7 +57,7 @@
     "express-session": "^1.18.1",
     "file-type": "^19.6.0",
     "google-auth-library": "^9.15.0",
-    "langsmith": "^0.3.46",
+    "langsmith": "0.2.15-rc.6",
     "moment": "^2.30.1",
     "passport": "^0.7.0",
     "passport-twitter": "^1.0.4",
